[gd_scene load_steps=29 format=3 uid="uid://2yapahi5iiig"]

[ext_resource type="Script" path="res://scripts/enemies/primum_terrae.gd" id="1_d5rn3"]
[ext_resource type="PackedScene" uid="uid://ccudh43gqe1os" path="res://scenes/spawnables/crystal_spike.tscn" id="2_bqyax"]
[ext_resource type="Shader" path="res://scripts/shaders/damage_flash.gdshader" id="2_sn304"]
[ext_resource type="PackedScene" uid="uid://m0rn0ncy7ynd" path="res://scenes/spawnables/boulder.tscn" id="3_wkdl4"]
[ext_resource type="Texture2D" uid="uid://tujwryxdhxej" path="res://assets/images/enemies/bosses/primum_terrae.png" id="3_xprxn"]
[ext_resource type="PackedScene" uid="uid://dsmx1utubr8d7" path="res://scenes/components/health_component.tscn" id="4_3py6e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fexdy"]
resource_local_to_scene = true
shader = ExtResource("2_sn304")
shader_parameter/flash_color = Color(1, 0.388235, 0.321569, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tp16u"]
atlas = ExtResource("3_xprxn")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1340d"]
atlas = ExtResource("3_xprxn")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8lb5"]
atlas = ExtResource("3_xprxn")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mco05"]
atlas = ExtResource("3_xprxn")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxkha"]
atlas = ExtResource("3_xprxn")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rujl"]
atlas = ExtResource("3_xprxn")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke8w7"]
atlas = ExtResource("3_xprxn")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvhn0"]
atlas = ExtResource("3_xprxn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yaiy"]
atlas = ExtResource("3_xprxn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_725nn"]
atlas = ExtResource("3_xprxn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fhg1"]
atlas = ExtResource("3_xprxn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6tcp"]
atlas = ExtResource("3_xprxn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ryrn"]
atlas = ExtResource("3_xprxn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_s34vg"]
animations = [{
"frames": [],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp16u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1340d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8lb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mco05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxkha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rujl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke8w7")
}],
"loop": true,
"name": &"fracture",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvhn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yaiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_725nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yaiy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fhg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6tcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ryrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6tcp")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6r886"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jxjh7"]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ksndq"]
_data = {
"RESET": SubResource("Animation_6r886"),
"flash": SubResource("Animation_jxjh7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgivn"]
size = Vector2(228, 196)

[sub_resource type="CircleShape2D" id="CircleShape2D_g4tic"]
radius = 611.808

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7ps8"]
size = Vector2(124, 128)

[sub_resource type="Curve2D" id="Curve2D_fowes"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 51, 91, 0, 0, 0, 0, 137, 160, 0, 0, 0, 0, 259, 201, 0, 0, 0, 0, 424, 192)
}
point_count = 5

[node name="PrimumTerrae" type="CharacterBody2D" groups=["Boss", "Enemy"]]
collision_layer = 4
collision_mask = 0
motion_mode = 1
script = ExtResource("1_d5rn3")
crystal_spike_prefab = ExtResource("2_bqyax")
boulder_prefab = ExtResource("3_wkdl4")
display_name = "Primum Terrae"
boss_catalyst_to_grant = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_fexdy")
sprite_frames = SubResource("SpriteFrames_s34vg")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.174224

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_ksndq")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qgivn")

[node name="ObjectParent" type="Node" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("4_3py6e")]
curr_health = 300.0
max_health = 300.0

[node name="GlobalCooldown" type="Timer" parent="."]
one_shot = true

[node name="SpecialCooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="VisionArea" type="Area2D" parent="."]

[node name="VisionShape" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_g4tic")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_j7ps8")

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="ChargeLifetime" type="Timer" parent="."]
one_shot = true

[node name="FracturePaths" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="FracturePaths"]
curve = SubResource("Curve2D_fowes")

[node name="Path2D2" type="Path2D" parent="FracturePaths"]
rotation = -0.841721
curve = SubResource("Curve2D_fowes")

[node name="Path2D3" type="Path2D" parent="FracturePaths"]
rotation = -1.78854
curve = SubResource("Curve2D_fowes")

[node name="Path2D4" type="Path2D" parent="FracturePaths"]
rotation = -2.60409
curve = SubResource("Curve2D_fowes")

[node name="Path2D5" type="Path2D" parent="FracturePaths"]
rotation = 2.69044
curve = SubResource("Curve2D_fowes")

[node name="Path2D6" type="Path2D" parent="FracturePaths"]
rotation = 1.97897
curve = SubResource("Curve2D_fowes")

[node name="Path2D7" type="Path2D" parent="FracturePaths"]
rotation = 0.967611
curve = SubResource("Curve2D_fowes")

[connection signal="Dead" from="HealthComponent" to="." method="_on_health_component_dead"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
